logical-solutions/styles/4-sections/product.sass
.products
  display: flex
  flex-wrap: wrap
  justify-content: flex-start

  &--contact-btn-container
    position: relative
    min-height: 4.5rem

  &--contact-btn
    position: absolute
    bottom: 0
    width: 90%


.product

  &--image
    width: 100%
    height: 27rem
    position: relative
    background-size: cover
    background-position: center
    background-repeat: no-repeat

  &--name
    font-size: 1.7rem
    @extend .text-bold
    letter-spacing: 1.25px
    padding: 0 1.6rem
    margin: 0
    width: 100%
    display: block
    position: absolute
    bottom: 2.5rem
    transition: bottom .3s $ease-out-quint

    &::after
      content: ''
      position: absolute
      top: calc(100% + 1px)
      left: 0
      right: 4rem
      height: 2px
      background: $brand-green

  &--overlay
    background: transparentize($brand-dark-blue, .35)
    height: 5.125rem
    width: 100%
    position: absolute
    left: 0
    bottom: 0
    transition: height .3s $ease-out-quint

  &--learn-more
    position: absolute
    left: 50%
    bottom: -4.75rem
    transform: translateX(-50%)
    opacity: 0
    transition: opacity .3s $ease-out-quint, bottom .3s $ease-out-quint, color .3s $ease-out-quint, border-color .3s $ease-out-quint, background-color .3s $ease-out-quint

  &--info-container
    background-color: $mid-grey
    transition: background-color .3s $ease-out-quint
    position: relative

  &--info
    margin: 0
    overflow: hidden
    padding: 1.8rem
    font-size: 1.6rem
    overflow-wrap: break-word
    line-height: 1.8rem
    letter-spacing: .5px
    height: 7.25rem

  &--modal-content
    display: flex

    @media screen and (max-width: 767px)
      width: 100%
      max-width: 467px
      margin: 0 auto
      flex-direction: column

  &--modal-image
    width: 46rem
    height: 46rem
    position: relative
    overflow: hidden
    background: $cool-light-grey center / cover no-repeat
    flex-grow: 0
    flex-shrink: 0
    margin-right: 8rem

    @media screen and (max-width: 1199px)
      width: 40rem
      height: 40rem

    @media screen and (max-width: 991px)
      width: 35rem
      height: 35rem
      margin-right: 5rem

    @media screen and (max-width: 767px)
      width: calc(100vw - 30px)
      max-width: 467px
      height: calc(100vw - 30px)
      max-height: 467px
      margin-bottom: 2rem

  &--modal-description
    position: relative

  &--modal-description-area
    height: calc(100% - 6rem)
    overflow-y: auto
    padding-right: 1rem

  &--modal-cta
    position: absolute
    bottom: 0
    left: 0

    @media screen and (max-width: 767px)
      position: static
      width: 100%

.product-modal
  &--scroll-content
    height: calc(100% - 9rem)
    overflow: auto

@media screen and (min-width: 509px)
  .product:hover
    .product
      &--name
        bottom: 15rem

      &--overlay
        height: 100%

      &--info-container
        background: $brand-blue

      &--info
        color: white

      &--learn-more
        opacity: 1
        bottom: 5.5rem


@media screen and (min-width: 1200px)
  $product_margin: 0 2rem 4.5rem 0
  $product_width: calc(25% - 1.5rem)

  .product, .products--contact-btn-container
    margin: $product_margin
    width: $product_width

    &:nth-child(4n)
      margin-right: 0

@media screen and (min-width: 992px) and (max-width: 1199px)
  $product_margin: 0 2rem 4rem 0
  $product_width: calc(33% - 1.3333rem)

  .product, .products--contact-btn-container
    margin: $product_margin
    width: $product_width

    &:nth-child(3n)
      margin-right: 0

  .products--contact-btn-container
    width: $product_width

  .products--contact-btn
    width: 100%

@media screen and (min-width: 768px) and (max-width: 991px)
  $product_margin: 0 2rem 4.5rem 0
  $product_width: calc(33% - 1.3333rem)

  .product, .products--contact-btn-container
    margin: $product_margin
    width: $product_width

    &:nth-child(3n)
      margin-right: 0

  .products--contact-btn-container:nth-child(3n+1)
    width: 100%
    &.products--contact-btn
    width: $product_width
    left: 50%
    transform: translateX(calc(-50% - 0.3333rem))

  .products--contact-btn
    width: 100%
    bottom: auto
    top: 50%
    left: 50%
    transform: translate(calc(-50%), -50%)

@media screen and (max-width: 767px)
  $product_width: 27rem

  .products
    justify-content: center

  .product, .products--contact-btn-container
    width: $product_width
    margin: 1rem

  .products--contact-btn-container
    margin-top: 0
    margin-bottom: 7.5rem

  .products--contact-btn
    width: 100%

@media screen and (min-width: 509px) and (max-width: 767px)
  $product_margin: 0 2rem 3rem 0
  $product_width: 27rem

  .products
    &--contact-btn-container:nth-child(2n+1)
      width: 56rem

      &.products--contact-btn
        width: $product_width
        left: 50%
        transform: translateX(calc(-50%))

    &--contact-btn
      width: 100%
      bottom: auto
      top: 50%
      left: 50%
      transform: translate(calc(-50%), -50%)

@media screen and (max-width: 508px)
  .product
    &--image
      height: 8rem
      background: none !important

    &--overlay
      height: 100%

@media screen and (max-width: 414px)
  $product_margin: 0 0 3rem 0

  .product
    margin: $product_margin

  .products
    &--contact-btn
      bottom: auto
      top: 50%
      left: 50%
      transform: translate(calc(-50%), -50%)

